--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "streamlit>=1.29.0",
     "google>=3.0.0",
     "google.generativeai",
+    "PyMuPDF>=1.23.9",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
