--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "google>=3.0.0",
     "google.generativeai",
     "PyMuPDF>=1.23.9",
+    "openai>=1.10.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
